# minc-stuffs

./: .gitmodules  AUTHORS  COPYING  ChangeLog  Makefile.am  NEWS  README  README.md  autogen.sh  configure.ac  setup.py
data/: Makefile.am
m4/: mni_REQUIRE_MNILIBS.m4  smr_WITH_BUILD_PATH.m4
perl/: Makefile.am  add_noise_to_volume  atlas_to_atlas.pl  concatenate_tags  grid_object_manipulator  lin_from_nlin  make_xfm_for_grid.pl  ray_trace_crosshair  scale_voxels  sge_batch
python/: TFCE  average_values_across_segmentation  bayes_intensity_update  compute_determinant.py  compute_values_across_segmentation  cython_functions.pyx  measure_xcorr  minc_label_ops  pmincaverage  replace_label_with_nearest_valid_label  rotational_minctracc.py  smooth_vector  volumes_from_labels_only  voxel_vote  vtk_meshconvert.py
src/: Makefile.am  ParseArgv.c  ParseArgv.h  compute_counts_for_labels.c  label_volumes_from_jacobians  label_volumes_from_jacobians.c  minc_displacement  minc_displacement.c  object_volume_dot_product.c  tagtoxfm.c  tagtoxfm.h  xfm2tag  xfm2tag.c
src/.deps/: label_volumes_from_jacobians.Po  minc_displacement.Po  xfm2tag.Po
