bin_PROGRAMS = minc_displacement label_volumes_from_jacobians xfm2tag compute_counts_for_labels

minc_displacement_SOURCES = minc_displacement.c
label_volumes_from_jacobians_SOURCES = label_volumes_from_jacobians.c
xfm2tag_SOURCES = xfm2tag.c
compute_counts_for_labels_SOURCES= compute_counts_for_labels.c

