bin_PROGRAMS = minc_displacement label_volumes_from_jacobians xfm2tag compute_counts_for_labels tagtoxfm object_volume_dot_product

minc_displacement_SOURCES = minc_displacement.c
label_volumes_from_jacobians_SOURCES = label_volumes_from_jacobians.c
xfm2tag_SOURCES = xfm2tag.c
compute_counts_for_labels_SOURCES= compute_counts_for_labels.c
tagtoxfm_SOURCES = tagtoxfm.c tagtoxfm.h ParseArgv.c ParseArgv.h
object_volume_dot_product_SOURCES = object_volume_dot_product.c

